--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -3,11 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/item_add"
-        android:title="打开"
-        android:orderInCategory="1"
-        app:showAsAction="never"/>
-    <item
         android:id="@+id/item_modify"
         android:title="移动"
         android:orderInCategory="2"
@@ -16,5 +11,10 @@
         android:id="@+id/item_delete"
         android:title="隐藏"
         android:orderInCategory="3"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/item_add"
+        android:title="卸载"
+        android:orderInCategory="1"
         app:showAsAction="never"/>
 </menu>
